# wrappy

./: CMakeLists.txt  README.md  wrappy.cpp
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  libwrappy-dev.install  libwrappy-dev.lintian-overrides  libwrappy1.install  libwrappy1.lintian-overrides  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex  wrappy.cron.d.ex  wrappy.default.ex  wrappy.doc-base.EX
debian/source/: lintian-overrides
examples/: email.cpp  plot.cpp  turtle.cpp
include/wrappy/: wrappy.h
include/wrappy/detail/: call.hpp
tests/: stdlib.cpp  sugar.cpp
